--- a/06_pci_ue/index.html
+++ b/06_pci_ue/index.html
@@ -34,7 +34,22 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### tbd
+							### Aufgabenstellung
+							- "Wir möchten PCI compliant werden - wie bereiten wir uns auf das Audit vor?" - Eine Frage an die PCI Experten/Projektteam
+							- ein Dokument je Team, gegliedert anhand der 12 Requirements, mit Verbesserungsvorschlägen damit PCI Audit erfolgreich geschafft werden kann.
+							- Abgabe per Mail (pdf) bis 24.12.2017
+							- Zwei Teams
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Dokumente
+							- <a href="images/06_pci_ue/gamechamp_beschreibung.pdf">Beschreibung</a>
+							- <a href="images/06_pci_ue/gamechamp_fw.pdf">FW</a>
+							- <a href="images/06_pci_ue/gamechamp_netzwerkplan.pdf">Netzwerkplan</a>
+							- <a href="images/06_pci_ue/gamechamp_organigramm.pdf">Organigramm</a>
+							- <a href="images/06_pci_ue/gamechamp_organisation.pdf">Organisation</a>
 						</textarea>
 				</section>
 
