--- a/07_risikoanalyse/index.html
+++ b/07_risikoanalyse/index.html
@@ -34,15 +34,91 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### tbd
+							### Wozu Risikoanalyse?
+							- Verständnis für interne Abläufe und Prozesse schaffen - Schaffen von Transparenz
+							- Sensibilisierung und Bewusstsein schaffen
+							- Compliance zu Standards (PCI, ISO, ...)
 						</textarea>
 				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Was ist ein Risiko?
+							- Ereignis (real oder virtuell) welches Schaden an Unternehmen, Projekt, Produkt oder "Ziel" hervorruft
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Rahmenbedingung für Risikoanalyse
+							- Auf Projekt- oder Unternehmensebene
+							- Workshop mit "Keyplayern"
+							- Dauer abhängig von Umfang der Analyse
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Ablauf (1) - Identifikation
+							- Sammeln und Auflisten von Risiken/"Schwachstellen" im Unternehmen
+							- Was kann alles schief gehen?
+							- Interne und externe Beeinflussbarkeit?
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Ablauf (1) - Identifikation
+							- Risiko für Umfeld: Welche abhängigen/angrenzenden Projekte werden beeinflusst
+							- Intern: Was passiert wenn Prozesse wegfallen? Mitarbeiter?
+							- Rahmenbedinungen: Finanzierung nicht gesichert?
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Ablauf (1) - Identifikation
+							- Rahmenbedinungen: Gesetze ändern sich
+							- Fehlerhafte Planung: Es werden Arbeitspakete vergessen oder falsch geplant?
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Ablauf (2) - Bewertung
+							- Anwenden von Bewertungschema
+							- Welche Risiken treten mit welcher Wahrscheinlichkeit mit welcher Auswirkung auf?
+							- Vermeiden, Verringern oder Akzeptanz möglich?
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Ablauf (3) - "Behandlung"
+							- Entscheidung wie man mit dem Resultat umgeht
+							- Aussitzen, akzeptieren, lösen oder vermeiden
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Risikoanalyse im echten Leben? Ihre Erfahrungen?
+						</textarea>
+				</section>
+
 
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Risikoanalyse
 							#### Wintersemester 2017/2018
 							FH JOANNEUM
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Quellenverzeichnis
+							- https://methodenpool.salzburgresearch.at/methode/risikoanalyse-2/#tab-EinsatzundNutzen
 						</textarea>
 				</section>
 
