--- a/07_risikoanalyse/index.html
+++ b/07_risikoanalyse/index.html
@@ -71,14 +71,7 @@
 							### Ablauf (1) - Identifikation
 							- Risiko für Umfeld: Welche abhängigen/angrenzenden Projekte werden beeinflusst
 							- Intern: Was passiert wenn Prozesse wegfallen? Mitarbeiter?
-							- Rahmenbedinungen: Finanzierung nicht gesichert?
-						</textarea>
-				</section>
-
-				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
-					<textarea data-template>
-							### Ablauf (1) - Identifikation
-							- Rahmenbedinungen: Gesetze ändern sich
+							- Rahmenbedinungen: Finanzierung nicht gesichert? Gesetze ändern sich
 							- Fehlerhafte Planung: Es werden Arbeitspakete vergessen oder falsch geplant?
 						</textarea>
 				</section>
@@ -97,15 +90,249 @@
 							### Ablauf (3) - "Behandlung"
 							- Entscheidung wie man mit dem Resultat umgeht
 							- Aussitzen, akzeptieren, lösen oder vermeiden
+							- Auswirkungen auf Unternehmen/Projekt evaluieren
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Risikoanalyse im echten Leben? Ihre Erfahrungen?
+							### Risikoanalyse im echten Leben - Ihre Erfahrungen?
 						</textarea>
 				</section>
 
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schritt 1: Klassifizierung von Informationen
+							- Was ist von einem Risiko überhaupt betroffen?
+							- Kritische Informationen im Unternehmen identifizieren
+							- Im ersten Schritt: keine Applikationen!
+							- Einordnen der Erkenntnisse in Kategorien
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							<table>
+								<thead>
+									<tr><th>Kategorie</th><th>Informations Typ</th></tr>
+								</thead>
+								<tbody>
+									<tr><td>Kundendaten</td><td>Adresse, Telefonnummer, Transaktionen, Finanzdaten</td></tr>
+									<tr><td>Netzwerk und Kommunikation</td><td>Server Konfiguration, Account informationen, Firewall Konfiguration</td></tr>
+									<tr><td>HR Informationen</td><td>Gehalt, Adresse, Mitarbeiterbewertung</td></tr>
+								</tbody>
+							</table>
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schritt 2: "Impact" Analyse
+							- Attribute
+							  - (C)onfidentiality
+							  - (I)ntegrity
+							  - (A)vailability
+							- Bewertung
+								- 0 = tolerierbar
+								- 1 = geringer Schaden
+								- 2 = großer Schaden
+								- 3 = starke Gefährdung für das Unternehmen
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							<img src="images/07_risikoanalyse/07_scm.png">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							<img src="images/07_risikoanalyse/osc_1.png">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							<img src="images/07_risikoanalyse/cpa_1.png">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schritt 3: (spezifische) Risiken
+							- Naturereignisse / Höhere Gewalt
+							- Menschliche Risiken
+							  - Absichtlich: Betrug, Überschätzung, Einbruch/unberechtigter Zutritt
+							  - Unabsichtlich: menschliches Versagen
+							- "Risiken von innen": Projektfinanzierung, Prioritäten verändern,
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schritt 4: Risiko Bewertung (1)
+							- "Risk Scoring Factor"
+							- Bandbreite: 0 - 1
+							  - 1: maximales Risiko
+								- 0: keine Risiko
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schritt 4: Risiko Bewertung (2)
+							- Risk Score = System Criticality x Risk Scoring Factor
+							- Beispiel
+							  - System: ERP System
+							  - Risiko: "Einbruch/unberechtigter Zutritt"
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schritt 4: Risiko Bewertung (3)
+							<img src="images/07_risikoanalyse/riskscoring.png">
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schritt 4: Risiko Bewertung (4)
+							- Unterteilen der "Bandbreite" in Teilschritte
+							- Hervorheben der Prioritäten
+							<img src="images/07_risikoanalyse/rsm_3.png">
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							<img src="images/07_risikoanalyse/rsm_final.png">
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schritt 5: Lessons Learned
+							- Risiken priorisieren
+							  - höchste Priorität: Kurzfristige Maßnahmen
+							  - hohe Priorität: Mittelfristige Maßnahmen
+							- "Quick Win"
+							  - Günstige und kurzfristige Maßnahmen identifizieren
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Risiken entschärfen
+							- Akzeptieren/annehmen
+							- Risiko auf niedrigeres Level herabstufen
+							- Risiko vermeiden
+							- Risiko (und Auswirkung) limitieren (CC, FW, Patchmanagement,...)
+							- Planen für den Ernstfall (IRP)
+							- Risiko übertragen (Versicherung)
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Kosten / Nutzen abwägen
+							- oftmals Management Entscheidung (nicht Projektteam)
+							- Kann sein:
+							  - Änderung in Prozess
+								- Anschaffung von HW/SW
+								- Kosten für zusätzliche Mitareiter
+								- Kosten für Schulungen
+								- ...
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Information Security Life Cycle
+						<img src="images/07_risikoanalyse/islc.png">
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Business Continuity Planning (BCP)
+						- BCP vs. Incident Response Plan?
+						- Vorher: Business Impact Analysis (BIA)
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Business Impact Analysis (BIA)
+						- Maximal tolerierbare Ausfall(zeit) pro Business Prozess
+						- Methoden:
+						  - Interview Mitarbeiter
+							- Sammeln und auswerten von historischen Daten
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Recovery
+						- Hot side: Gebäude mit Daten und Arbeitsplätze
+						- Warm side: Gebäude und Arbeitsplätze
+						- Cold side: Gebäude
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Incident Response Plan (1)
+						- Wer macht was wann im Fall des Falles
+						  - OCD
+						- Verschiedene Teams mit verschiedenen Zuständigkeiten
+						- Prozess in/output und Übergabe
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Incident Response Plan (2)
+						- eingehende Alarmmeldung
+						  - externe/interne Quellen
+						- Erstanalyse durch OCD
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Incident Response Plan (3)
+						- Entscheidung über Incident oder "false positive"
+						- Information an Support Team
+						  - Schwerwiegender Vorfall: Information an Kunden
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Incident Response Plan (4)
+						- Lösungsfindung
+						  - Zuziehen externer Spezialisten
+						- Kontenuierliche Updates an übriges Team
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Incident Response Plan (5)
+						- Gutmeldung an Support Team (an Kunden) und intern
+						- Dokumentation aller Kommunikation, Schritte und Dauer
+						- Lessons Learned
+					</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						### Incident Response Plan (6)
+						- Handbuch, Telefonnummern, Gedruckte Dokumente, ...
+					</textarea>
+				</section>
 
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
@@ -119,6 +346,9 @@
 					<textarea data-template>
 							### Quellenverzeichnis
 							- https://methodenpool.salzburgresearch.at/methode/risikoanalyse-2/#tab-EinsatzundNutzen
+							- E-Security Unterlagen - Prof.(FH) DI Ewald Graif
+							- IRP vs. BCP - https://www.luc.edu/environmentalservices/continuityofoperationsplans/emer_res_bus_con.shtml
+
 						</textarea>
 				</section>
 
