--- a/07_risikoanalyse/index.html
+++ b/07_risikoanalyse/index.html
@@ -35,8 +35,8 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Wozu Risikoanalyse?
-							- Verständnis für interne Abläufe und Prozesse schaffen - Schaffen von Transparenz
-							- Sensibilisierung und Bewusstsein schaffen
+							- Verständnis für interne Abläufe und Prozesse schaffen -> Transparenz
+							- Sensibilisierung und Bewusstsein für Risiken
 							- Compliance zu Standards (PCI, ISO, ...)
 						</textarea>
 				</section>
@@ -51,7 +51,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Rahmenbedingung für Risikoanalyse
-							- Auf Projekt- oder Unternehmensebene
+							- Periodisch oder anlassbezogen (Projekt- oder Unternehmensebene) durchführen
 							- Workshop mit "Keyplayern"
 							- Dauer abhängig von Umfang der Analyse
 						</textarea>
@@ -69,7 +69,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Ablauf (1) - Identifikation
-							- Risiko für Umfeld: Welche abhängigen/angrenzenden Projekte werden beeinflusst
+							- Risiko von/für Umfeld: Welche abhängigen/angrenzenden Projekte werden beeinflusst
 							- Intern: Was passiert wenn Prozesse wegfallen? Mitarbeiter?
 							- Rahmenbedinungen: Finanzierung nicht gesichert? Gesetze ändern sich
 							- Fehlerhafte Planung: Es werden Arbeitspakete vergessen oder falsch geplant?
@@ -142,19 +142,19 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							<img src="images/07_risikoanalyse/07_scm.png">
+							<img src="images/07_risikoanalyse/07_scm.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							<img src="images/07_risikoanalyse/osc_1.png">
+							<img src="images/07_risikoanalyse/osc_1.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							<img src="images/07_risikoanalyse/cpa_1.png">
+							<img src="images/07_risikoanalyse/cpa_1.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
@@ -165,7 +165,7 @@
 							- Menschliche Risiken
 							  - Absichtlich: Betrug, Überschätzung, Einbruch/unberechtigter Zutritt
 							  - Unabsichtlich: menschliches Versagen
-							- "Risiken von innen": Projektfinanzierung, Prioritäten verändern,
+							- "Risiken von innen": Projektfinanzierung, neue Prioritäten
 					</textarea>
 				</section>
 
@@ -175,7 +175,7 @@
 							- "Risk Scoring Factor"
 							- Bandbreite: 0 - 1
 							  - 1: maximales Risiko
-								- 0: keine Risiko
+							  - 0: keine Risiko
 					</textarea>
 				</section>
 
@@ -192,7 +192,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Schritt 4: Risiko Bewertung (3)
-							<img src="images/07_risikoanalyse/riskscoring.png">
+							<img src="images/07_risikoanalyse/riskscoring.png" style="background:none; border:none; box-shadow:none;">
 					</textarea>
 				</section>
 
@@ -201,13 +201,13 @@
 							### Schritt 4: Risiko Bewertung (4)
 							- Unterteilen der "Bandbreite" in Teilschritte
 							- Hervorheben der Prioritäten
-							<img src="images/07_risikoanalyse/rsm_3.png">
+							<img src="images/07_risikoanalyse/rsm_3.png" style="background:none; border:none; box-shadow:none;">
 					</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							<img src="images/07_risikoanalyse/rsm_final.png">
+							<img src="images/07_risikoanalyse/rsm_final.png" style="background:none; border:none; box-shadow:none;">
 					</textarea>
 				</section>
 
@@ -250,7 +250,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 						### Information Security Life Cycle
-						<img src="images/07_risikoanalyse/islc.png">
+						<img src="images/07_risikoanalyse/islc.png" style="background:none; border:none; box-shadow:none;">
 					</textarea>
 				</section>
 
@@ -268,7 +268,7 @@
 						- Maximal tolerierbare Ausfall(zeit) pro Business Prozess
 						- Methoden:
 						  - Interview Mitarbeiter
-							- Sammeln und auswerten von historischen Daten
+						  - Sammeln und auswerten von historischen Daten
 					</textarea>
 				</section>
 
