--- a/07_risikoanalyse/index.html
+++ b/07_risikoanalyse/index.html
@@ -71,7 +71,7 @@
 							### Ablauf (1) - Identifikation
 							- Risiko von/für Umfeld: Welche abhängigen/angrenzenden Projekte werden beeinflusst
 							- Intern: Was passiert wenn Prozesse wegfallen? Mitarbeiter?
-							- Rahmenbedinungen: Finanzierung nicht gesichert? Gesetze ändern sich
+							- Rahmenbedinungen: Finanzierung nicht gesichert? Gesetze ändern sich?
 							- Fehlerhafte Planung: Es werden Arbeitspakete vergessen oder falsch geplant?
 						</textarea>
 				</section>
@@ -118,7 +118,7 @@
 								</thead>
 								<tbody>
 									<tr><td>Kundendaten</td><td>Adresse, Telefonnummer, Transaktionen, Finanzdaten</td></tr>
-									<tr><td>Netzwerk und Kommunikation</td><td>Server Konfiguration, Account informationen, Firewall Konfiguration</td></tr>
+									<tr><td>Netzwerk und Kommunikation</td><td>Server Konfiguration, Account Informationen, Firewall Konfiguration</td></tr>
 									<tr><td>HR Informationen</td><td>Gehalt, Adresse, Mitarbeiterbewertung</td></tr>
 								</tbody>
 							</table>
@@ -175,7 +175,7 @@
 							- "Risk Scoring Factor"
 							- Bandbreite: 0 - 1
 							  - 1: maximales Risiko
-							  - 0: keine Risiko
+							  - 0: kein Risiko
 					</textarea>
 				</section>
 
@@ -241,7 +241,7 @@
 							- Kann sein:
 							  - Änderung in Prozess
 								- Anschaffung von HW/SW
-								- Kosten für zusätzliche Mitareiter
+								- Kosten für zusätzliche Mitarbeiter
 								- Kosten für Schulungen
 								- ...
 					</textarea>
@@ -287,7 +287,7 @@
 						- Wer macht was wann im Fall des Falles
 						  - OCD
 						- Verschiedene Teams mit verschiedenen Zuständigkeiten
-						- Prozess in/output und Übergabe
+						- Prozess In/Output und Übergabe
 					</textarea>
 				</section>
 
@@ -314,7 +314,7 @@
 						### Incident Response Plan (4)
 						- Lösungsfindung
 						  - Zuziehen externer Spezialisten
-						- Kontenuierliche Updates an übriges Team
+						- Kontinuierliche Updates an übriges Team
 					</textarea>
 				</section>
 
