--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -223,14 +223,14 @@ Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel</code></pre>
 							### Security Scanner: Nexpose
 							- Umfangreiche Security Suite
 							- Gratis für 30 Tage
-							- Auch als Cloud-base Variante
+							- Auch als Cloud-based Variante
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Kali Linux
-							- Linux Distribution basierende auf Debian/Ubuntu
+							- Linux Distribution basierend auf Debian/Ubuntu
 							- Voll gepackt mit Security/Pen Testing Tools
 							- Verfügbar als ISO und VM
 						</textarea>
