--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -191,7 +191,7 @@ Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel</code></pre>
 					<textarea data-template>
 							### Security Scanner: Nessus
 							- Für "Home Use" gratis
-							- vordefinierte Profile
+							- vordefinierte Profile (ua. für Meltdown/Spectre)
 							- simple Installation/Update
 							- Verschiedene Update Feed Varianten (kostenlos, 0-day, ...)
 						</textarea>
@@ -220,6 +220,12 @@ Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel</code></pre>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
+							<img src="images/09_securityscanning/openvas.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
 							### Security Scanner: Nexpose
 							- Umfangreiche Security Suite
 							- Gratis für 30 Tage
@@ -229,10 +235,31 @@ Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel</code></pre>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Kali Linux
+							### Security Suites
+							- Meist Linux Distribution mit vorinstallierter Software
+							- Bekannteste Beispiele:
+							  - Metasploit
+							  - Kali Linux
+							  - Black Arch
+							  - Cyborg Linux
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Kali Linux (1)
 							- Linux Distribution basierend auf Debian/Ubuntu
 							- Voll gepackt mit Security/Pen Testing Tools
 							- Verfügbar als ISO und VM
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Kali Linux (2)
+							- Umfangreicher Blog/Tutorials
+							- Unterteilungen in Tasks/Aufgaben
+							<img src="images/09_securityscanning/kali.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
