--- a/02_terminologie/index.html
+++ b/02_terminologie/index.html
@@ -148,6 +148,15 @@
 						</textarea>
 				</section>
 
+				<section data-markdown id="bedrohungen3" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Bedrohungen - eine Auswahl
+							- Nicht Verfügbarkeit eines Providers
+								- Cloud?
+							- ...
+						</textarea>
+				</section>
+
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Terminologie
